Ensure reshardingChangeStreamsMonitor's callback does not race with the main resharding donor thread

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The reshardingChangeStreamsMonitor's callback creates an operationContext from the 
      cancelableOpCtxFactory to update the state document. However, this call can race with the main run() thread of the donor here if abort was called.
       
      This issue isn't very common since the reshardingChangeSteamMonitor does take in a cancelToken from the donor/recipient and should interrupt its work if the cancelToken is cancelled. One solution would be to capture the factory object in the callback here.

            Assignee:
            Kruti Shah
            Reporter:
            Kruti Shah
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: