SERVER-104492 Ensure reshardingChangeStreamsMonitor callback does not race with the donor thread (#35572)

GitOrigin-RevId: c734088b270e87fe6e16af776571386e845b6105